add crimes menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
         "technical-check": "Periodical Technical Check",
         "car-insurance": "Car Insurance",
         "sanctions": "Sanctions",
+        "crimes": "Crimes",
         "glossary": "Glossary",
         "specimens": "Specimens",
         "useful-links": "Useful Links",
