--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -7,6 +7,7 @@
         "technical-check": "I.T.P.",
         "car-insurance": "R.C.A.",
         "sanctions": "Sancțiuni contravenționale",
+        "crimes": "Infracțiuni",
         "glossary": "Glosar documente",
         "specimens": "Specimene",
         "useful-links": "Utile",
