update all data, add tiaf

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
         "useful-links": "Useful Links",
         "legis": "Legis",
         "forum": "Forum",
-        "telegram-group": "Telegram Group"
+        "telegram-group": "Telegram Group",
+        "tiaf": "T.I.A.F",
     }
 }
