--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -13,6 +13,7 @@
         "useful-links": "Utile",
         "legis": "Legis",
         "forum": "Forum",
-        "telegram-group": "Grup Telegram"
+        "telegram-group": "Grup Telegram",
+        "tiaf": "T.I.A.F"
     }
 }
