--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,6 @@
         "legis": "Legis",
         "forum": "Forum",
         "telegram-group": "Telegram Group",
-        "tiaf": "T.I.A.F",
+        "tiaf": "T.I.A.F"
     }
 }
