add reset-password, update user details, extra menu items, search in user-management

--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -12,6 +12,7 @@
         "useful-links": "Utile",
         "legis": "Legis",
         "forum": "Forum",
+        "android-app": "Android APK",
         "telegram-group": "Grup Telegram",
         "tiaf": "T.I.A.F"
     }
