--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
         "useful-links": "Useful Links",
         "legis": "Legis",
         "forum": "Forum",
+        "android-app": "Android APK",
         "telegram-group": "Telegram Group",
         "tiaf": "T.I.A.F"
     }
