--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -95,5 +95,10 @@
         "stolen-auto-eu": "Auto furate (UE)",
         "stolen-auto-it-slo-sk-cz-ro": "Auto furate - It/Slo/Sk/Cz/Ro",
         "obd-localization": "Localizare mufa OBD"
+    },
+    "driving-licenses": {
+        "others": "Alte Permise",
+        "usa": "S.U.A.",
+        "encoding": "Encondig&Decoding D.L."
     }
 }
