--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -100,5 +100,8 @@
         "others": "Alte Permise",
         "usa": "S.U.A.",
         "encoding": "Encondig&Decoding D.L."
+    },
+    "vehicle-info": {
+        "switzerland": "Elveția"
     }
 }
