--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -128,5 +128,8 @@
         "spain": "Spain",
         "sweden": "Sweden",
         "ukraine": "Ukraine"
+    },
+    "technical-check":{
+        "germany": "Germany"
     }
 }
