--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -128,5 +128,8 @@
         "spain": "Spania",
         "sweden": "Suedia",
         "ukraine": "Ucraina"
+    },
+    "technical-check":{
+        "germany": "Germania"
     }
 }
