update driving license

--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -110,7 +110,8 @@
         "others": "Alte Permise",
         "usa": "S.U.A.",
         "canada": "Canada",
-        "encoding": "Encondig&Decoding D.L."
+        "encoding": "Encondig&Decoding D.L.",
+        "spain": "Spania"
     },
     "vehicle-info": {
         "switzerland": "Elveția",
