--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,7 +110,8 @@
         "others": "Other Driving Licenses",
         "usa": "U. S. A.",
         "canada": "Canada",
-        "encoding": "Encondig&Decoding D.L."
+        "encoding": "Encondig&Decoding D.L.",
+        "spain": "Spain"
     },
     "vehicle-info": {
         "switzerland": "Switzerland",
