--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -113,6 +113,7 @@
             "netherlands": "Netherlands",
             "great-britain":"Great Britain"
         },
+        "specimens-eu": "Specimens (EU Registration Certificates)",
         "obd-localization": "OBD Connector Localization"
     },
     "driving-licenses": {
