--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -113,6 +113,7 @@
             "netherlands": "Olanda",
             "great-britain":"Marea Britanie"
         },
+        "specimens-eu": "Specimene (Certificate Înmatriculare - UE)",
         "obd-localization": "Localizare mufa OBD"
     },
     "driving-licenses": {
