--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -111,7 +111,8 @@
             "it-slo-sk-cz-ro": "Auto furate - It/Slo/Sk/Cz/Ro",
             "spain": "Spania",
             "netherlands": "Olanda",
-            "great-britain":"Marea Britanie"
+            "great-britain":"Marea Britanie",
+            "italy": "Italia"
         },
         "specimens-eu": "Specimene (Certificate Înmatriculare - UE)",
         "obd-localization": "Localizare mufa OBD"
