--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,13 +47,22 @@
         },
         "cnp-validation":{
             "title": "CNP Validation",
-            "cnp-ro": "Romanian CNP check",
             "idnp-md": "Moldovan IDNP check",
             "pesel": "Polish PESEL Check",
             "rodne-cislo": "Czech Rodne Cislo check",
             "nif-spain": "Spanish NIF/NIE check",
             "national-registry-number-belgium": "Belgium National Registry Number check",
-            "usn-bulgaria": "Bulgarian USN number check"
+            "usn-bulgaria": "Bulgarian USN number check",
+            "romania": {
+                "title": "CNP Validation Romania",
+                "link1": "Romania Link 1",
+                "link2": "Romania Link 2"
+            },
+            "moldova": {
+                "title": "CNP Validation Moldova",
+                "link1": "Moldova Link 1",
+                "link2": "Moldova Link 2"
+            }
         }
     },
     "specimens": {
