driving-licenses update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -131,7 +131,8 @@
         "usa": "U. S. A.",
         "canada": "Canada",
         "encoding": "Encondig&Decoding D.L.",
-        "spain": "Spain"
+        "spain": "Spain",
+        "columbia": "Columbia - VPN"
     },
     "vehicle-info": {
         "switzerland": "Switzerland",
