--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -131,7 +131,8 @@
         "usa": "S.U.A.",
         "canada": "Canada",
         "encoding": "Encondig&Decoding D.L.",
-        "spain": "Spania"
+        "spain": "Spania",
+        "columbia": "Columbia - VPN"
     },
     "vehicle-info": {
         "switzerland": "Elveția",
