add v1 of digit calculator and travel-docs-samples

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -153,5 +153,11 @@
     },
     "technical-check":{
         "germany": "Germany"
+    },
+    "digit-calculator":{
+        "title": "Digit Calculator",
+        "user-input": "Input",
+        "result": "Result",
+        "calculate": "Calculate"
     }
 }
