update driving licenses

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,7 +132,11 @@
         "canada": "Canada",
         "encoding": "Encondig&Decoding D.L.",
         "spain": "Spain",
-        "columbia": "Columbia - VPN"
+        "columbia": "Columbia - VPN",
+        "nepal": "Nepal",
+        "pakistan": "Pakistan",
+        "peru": "Peru",
+        "adr-certificates": "ADR Certificates"
     },
     "vehicle-info": {
         "switzerland": "Switzerland",
