--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -78,7 +78,8 @@
         "pc-ukraine": "Specimens ID (Ukraine)",
         "airline-info-handbook": "EU Documents for Foreigners (Airline Information Handbook)",
         "north-america": "Specimens of North American Documents",
-        "south-america": "Specimens of South American Documents"
+        "south-america": "Specimens of South American Documents",
+        "the-eye": "THE-EYE.NL"
     },
     "tiaf": {
         "euvid": "EUVID",
