--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -78,7 +78,8 @@
         "pc-ukraine": "Specimene P.C.(Ucraina)",
         "airline-info-handbook": "Doc.UE pentru straini (Airline Information Handbook)",
         "north-america": "Specimene documente America de Nord",
-        "south-america": "Specimene documente America de Sud"
+        "south-america": "Specimene documente America de Sud",
+        "the-eye": "THE-EYE.NL"
     },
     "tiaf": {
         "euvid": "EUVID",
